2016-08-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	Don't use `string-as-multibyte' and `string-as-unibyte' that are
	obsolete in Emacs 25.2.
	Use `string-make-multibyte' and `string-make-unibyte' instead.

	* octet.el (octet-w3m-region):
	* w3m-image.el (w3m-imagick-convert-buffer):
	* w3m-proc.el (w3m-process-start-after):
	* w3m-util.el (w3m-insert-string): Do.

	Remove Gmane mailing list archive stuff.

	* w3m.el (w3m-gmane-url-at-point): Remove.

2016-08-01  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-lnum.el: Do a boundp test for browse-url-generic-program.

2016-07-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	Make w3m-delete-buffer return to the buffer that launches
	the buffer to be deleted if w3m-use-tab is non-nil.

	* w3m.el (w3m-parent-session-buffer): New internal variable.
	(w3m-view-this-url-1):
	Save the current session in it when launching a new session.
	(w3m-delete-buffer, w3m-next-buffer):
	Return to the buffer that launches the buffer to be deleted.

2016-07-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-lynx-like-map): Bind "K" to w3m-scroll-down.
	[emacs-w3m:12570]

2016-07-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-ems.el (w3m-create-image): Run w3m-image-animate in page buffer.

	* w3m.el (w3m-goto-url): Run w3m-select-buffer-update after evaluating
	w3m-display-hook and w3m-display-functions.  [emacs-w3m:12568]
	It seems to be rational to run w3m-force-window-update, that
	w3m-select-buffer-update runs, after settling down the page display.

2016-04-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-util.el (w3m-buffer-name-lessp): Work for Emacs 25.2 that starts
	numbered buffer names with *w3m*<1>, not *w3m*<2>.

2016-03-04  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-markdown-converter): New option to select the command to
	convert markdown formed files into HTML format.
	(w3m-prepare-markdown-content): Use the above.

2016-03-03  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el: Add support for markdown formed files.